[package]
name = "p2p-network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35", features = ["full"] }
futures = "0.3.29"
libp2p = {version ="0.53.2",features =["full"]}
tracing-subscriber = { version = "0.3", features = ["env-filter"]}